--- a/index.html
+++ b/index.html
@@ -111,6 +111,6 @@
         </aside>
         </section>
     </main>
-    <footer>Site Criado por gustavo guanbara</footer>
+    <footer>Site Criado por thiago Augusto</footer>
 </body>
 </html>
